--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,7 @@ title	{
     font-weight: 700;
     font-family: 'Josefin Sans', sans-serif;
     text-transform: uppercase;
-    font-size: 3em;
+    font-size: 24px;
     letter-spacing: 3px;
  	opacity: 1;
  	clear: both;
